tests/sumo/errors/too_many_teleports/output.sumo.meso
Loading net-file from 'net.net.xml' ... done (4ms).
Loading done.
Simulation version v1_7_0+0625-fbb42d88cd started with time: 0.00
Simulation ended at time: 3028.00
Reason: Too many teleports.
Performance: 
 Duration: 0.06s
 Real time factor: 55054.5
 UPS: 7076200.000000
Vehicles: 
 Inserted: 293
 Running: 248
 Waiting: 0
Teleports: 6 (Jam: 6)

